# flinkpilot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.agents/: CONTEXT.md
.agents/workflows/: start-task.md
backend/: .env.local  gradio_app.py  main.py  pyproject.toml  requirements.txt
backend/agent/: graph.py
backend/agent/prompts/: system_prompt.md
backend/agent/tools/: flink_tools.py
docs/: README.md  flinkpilot_architecture_v1_archive.md
docs/01-vision/: product-positioning.md
docs/02-architecture/: agent-design.md  overview.md
docs/03-decisions/: ADR-001-flink-version.md  ADR-002-langgraph.md  ADR-003-sql-gateway-mode.md
docs/04-guides/: connector-jars.md  flink-config.md  llm-api-config.md  local-setup.md
docs/05-development/: backend-dev.md  frontend-dev.md  sql-prompt-guide.md  testing-plan.md
docs/06-roadmap/: phases.md  progress.md
flink-conf/: config.yaml
